tests/unit/default/syntax-error/075-create-table-dot-column-first.x.t
---- IN ----
+%table.name:int^|
---- OUT ----
---- ERR ----
syntax: expected EOL after `....name:int^` near `|` at position 17 - at line 1
---- EXIT ----
1
